# nanote

./: Cargo.toml  README.md  build.rs
docs/: requirements.md
src/: main.rs
